[package]
edition      = "2024"
name         = "s40-hardware"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "s40-hardware"
path = "./src/bin/main.rs"
test = false

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }
esp-println = { version = "0.16.1", features = ["esp32"] }

esp-alloc        = "0.9.0"
embedded-graphics = "0.8.1"


[profile.dev]
opt-level = "s"

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
